packages/forge-dsl/fixtures/errors/e11-empty-choice.fable
// expect: FORGE310
-> hall

=== hall ===
The hall is silent.
*
  Something happens anyway.
  -> END
+ Leave.
  -> END
